fixed link, fixed alignment of demo

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -283,6 +283,7 @@ article {
     .demo-bottom {
         display: flex;
         flex-direction: column;
+        align-items: center;
         align-content: center;
         div {
             display: flex;
